--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <h1>Hello! myself monika</h1>
-    <p>I love listening to music</p>
-    <h1>I love coding and i want to be a software engineer</h1>
+    <p>I love coding </p>
+    <p>my passion is drawing and painting</p>
+    <h1>i want to be a software engineer</h1>
 </body>
 </html>
