--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, sans-serif;
         }
 
         /* Welcome screen */
@@ -15,7 +15,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #ffedf0;
+            background-color: #0fa70c;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -35,7 +35,7 @@
             font-size: 18px;
             background-color: #ffb6c1;
             border: none;
-            cursor: pointer;
+            cursor: hand;
             border-radius: 5px;
         }
 
@@ -69,7 +69,8 @@
 <div id="mainContent">
     <h1>Hello! This is my first website </h1>
     <p>I love drawing!</p>
-    <img src="yourart.png" alt="My Art" width="300">
+    <p>i'm a first year computer science student focusing on my carrer</p>
+    <img src="c:\Users\WELCOME\Downloads\download.jpg"  width="300">
 </div>
 
 <script>
